- Added Alignment Module (experimental). A small module that predicts pixel shifts and aligns pre-post features. It can be enabled via command line arg, default is disabled. - included data list creation scripts (in new format) inside the ipynb files and archived .py scripts - add new logfiles

--- a/dataset_analysis_scripts/earthquake-turkey_dataset_analysis.ipynb
+++ b/dataset_analysis_scripts/earthquake-turkey_dataset_analysis.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -414,6 +414,95 @@
     "    current_row += 1 # increase when a new row is added to the plot. \n",
     "\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Data Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning; create data paths in the previous cells before running this.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 944/944 [00:00<00:00, 2911340.42it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created: /mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey/all_list.txt\n",
+      "Generated: /mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey/train_list.txt\n",
+      "Generated: /mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey/test_list.txt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "import os.path\n",
+    "\n",
+    "################################################################################################################\n",
+    "\n",
+    "print(\"Warning; create data paths in the previous cells before running this.\")\n",
+    "\n",
+    "################################################################################################################\n",
+    "\n",
+    "def create_combined_list(base_path: str, all_data: list[DataPaths]):\n",
+    "    with open(f\"{base_path}/all_list.txt\", \"w\") as f:\n",
+    "        for d in tqdm(all_data):\n",
+    "            f.write(f\"{d.stem}\\n\")\n",
+    "        print(f\"Created: {os.path.realpath(f.name)}\")\n",
+    "\n",
+    "def create_train_test_lists(base_path: str, all_data: list[DataPaths], train_ratio: float):\n",
+    "    TOTAL = len(all_data)\n",
+    "    BORDER_IDX = round(TOTAL * train_ratio)\n",
+    "\n",
+    "    with open(f\"{base_path}/train_list.txt\", \"w\") as f:\n",
+    "        for i in range(0, BORDER_IDX):\n",
+    "            d = all_data[i]\n",
+    "            f.write(f\"{d.stem}\\n\")\n",
+    "        print(f\"Generated: {os.path.realpath(f.name)}\")\n",
+    "\n",
+    "    with open(f\"{base_path}/test_list.txt\", \"w\") as f:\n",
+    "        for i in range(BORDER_IDX, TOTAL):\n",
+    "            d = all_data[i]\n",
+    "            f.write(f\"{d.stem}\\n\")\n",
+    "        print(f\"Generated: {os.path.realpath(f.name)}\")\n",
+    "\n",
+    "################################################################################################################\n",
+    "\n",
+    "TRAIN_RATIO = 0.80\n",
+    "\n",
+    "create_combined_list(BASE_PATH, all_data)\n",
+    "create_train_test_lists(BASE_PATH, all_data, TRAIN_RATIO)\n",
+    "\n",
+    "# create_combined_list(FILTERED_BASE_PATH, all_filtered_data)\n",
+    "# create_train_test_lists(FILTERED_BASE_PATH, all_filtered_data, TRAIN_RATIO)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
