--- a/dataset_analysis_scripts/xBD_dataset_analysis.ipynb
+++ b/dataset_analysis_scripts/xBD_dataset_analysis.ipynb
@@ -694,6 +694,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Data Lists"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -742,7 +749,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Target Image (mask) Creation \n",
+    "## Target Image (mask) Creation \n",
     "[DEPRECATED - USE ``dataset_create_target-masks.py``] "
    ]
   },
