--- a/pipeline_changemamba.ipynb
+++ b/pipeline_changemamba.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "c2204f68",
    "metadata": {},
    "outputs": [
@@ -18,6 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2025-09-29_11-06-33\n",
       "Number of datasets: 6\n"
      ]
     }
@@ -25,6 +26,7 @@
    "source": [
     "\n",
     "from dataclasses import dataclass\n",
+    "from datetime import datetime\n",
     "\n",
     "# ================= MODEL CONFIG ================= #\n",
     "cfg_dict = {\n",
@@ -87,6 +89,7 @@
     "        test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ida/filtered/test_list.txt',\n",
     "    )\n",
     "}\n",
+    "print(datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\"))\n",
     "print(f\"Number of datasets: {len(dataset_info_dict)}\")\n"
    ]
   },
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "a2975496",
    "metadata": {},
    "outputs": [
@@ -113,11 +116,25 @@
       "\u001b[01;34mchangedetection\u001b[0m/           LICENSE                     README.md\n",
       "\u001b[01;34mclassification\u001b[0m/            \u001b[01;34mLOGLAR_CMAG\u001b[0m/                README_zh-CN.md\n",
       "\u001b[01;34mdataset_analysis_scripts\u001b[0m/  modelcard.sh                requirements.txt\n",
-      "\u001b[01;34mfigures\u001b[0m/                   pipeline_changemamba.ipynb\n",
-      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-28_01-27-21_MambaBDA_Base_xBD_FOCAL.log\n",
-      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-28_01-27-21_MambaBDA_Base_xBD_FOCAL.pid.log\n",
+      "\u001b[01;34mfigures\u001b[0m/                   pipeline_changemamba.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alpgenc/miniconda3/envs/changemamba2/lib/python3.10/site-packages/IPython/core/magics/osm.py:417: UserWarning: This is now an optional IPython functionality, setting dhist requires you to install the `pickleshare` library.\n",
+      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-29_11-11-05_MambaBDA_Base_EarthquakeTurkey_FOCAL_ALIGN.log\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-29_11-11-05_MambaBDA_Base_EarthquakeTurkey_FOCAL_ALIGN.pid.log\n",
       "UID          PID    PPID  C STIME TTY          TIME CMD\n",
-      "alpgenc  3504639       1  0 01:27 ?        00:00:01 python -u changedetection/sc\n"
+      "alpgenc  3549587       1  0 11:11 ?        00:00:01 python -u changedetection/sc\n"
      ]
     }
    ],
@@ -135,18 +152,23 @@
     "\n",
     "\n",
     "MODEL_NAME = 'MambaBDA_Base' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
-    "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\" || \"EarthquakeTurkey\" || \"HurricaneIda\"\n",
+    "DATASET = \"EarthquakeTurkey\" # \"xBD\" || \"mwBTFreddy\" || \"EarthquakeTurkey\" || \"HurricaneIda\"\n",
     "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
     "cfg_file = cfg_dict[MODEL_NAME]\n",
     "pretrained_file = pretrained_dict[MODEL_NAME] # Use this to train from \"scratch\" (almost) || use next line to fine tune a trained model.\n",
     "# pretrained_file = \"/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-23_22-02-06_MambaBDA_Base_xBD_FOCAL/model_step100000.pth\"\n",
+    "\n",
     "FOCAL = True # True || False\n",
+    "ALIGNMENT = True # True || False\n",
     "\n",
     "#############################################################################################################\n",
     "\n",
     "FOCAL_str = '_FOCAL' if FOCAL else ''\n",
+    "ALIGN_str = '_ALIGN' if ALIGNMENT else ''\n",
     "FT_str = '_FT' if 'tr2025' in pretrained_file else '' # 'tr2025' -> already trained model, so new training using this will be a fine tune.\n",
+    "\n",
+    "FILE_ID_str = f\"{now}_{MODEL_NAME}_{DATASET}{FT_str}{FOCAL_str}{ALIGN_str}\"\n",
     "\n",
     "\n",
     "train_dataset_path   = dataset_info_dict[DATASET].train_dataset_path\n",
@@ -154,7 +176,8 @@
     "test_dataset_path    = dataset_info_dict[DATASET].test_dataset_path\n",
     "test_data_list_path  = dataset_info_dict[DATASET].test_data_list_path\n",
     "\n",
-    "logfilename = f\"/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_{now}_{MODEL_NAME}_{DATASET}{FT_str}{FOCAL_str}.log\"\n",
+    "\n",
+    "logfilename = f\"/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_{FILE_ID_str}.log\"\n",
     "pidfilename = logfilename.replace(\".log\", \".pid.log\")\n",
     "print(logfilename)\n",
     "print(pidfilename)\n",
@@ -175,9 +198,9 @@
     "     --dataset                {DATASET} \\\n",
     "     --batch_size             8 \\\n",
     "     --crop_size              256 \\\n",
-    "     --max_iters              400_000 \\\n",
+    "     --max_iters              100_000 \\\n",
     "     --model_type             {MODEL_NAME} \\\n",
-    "     --model_param_path       '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr{now}_{MODEL_NAME}_{DATASET}{FT_str}{FOCAL_str}' \\\n",
+    "     --model_param_path       '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr{FILE_ID_str}' \\\n",
     "     --train_dataset_path     {train_dataset_path} \\\n",
     "     --train_data_list_path   {train_data_list_path} \\\n",
     "     --test_dataset_path      {test_dataset_path} \\\n",
@@ -189,6 +212,7 @@
     "     --weight_decay           0.005 \\\n",
     "     --extension              {EXTENSION} \\\n",
     "     {'--focal_loss' if FOCAL else ''} \\\n",
+    "     {'--enable_alignment' if ALIGNMENT else ''} \\\n",
     "     >/dev/null 2>&1 & echo $! > {pidfilename}\n",
     "\"\"\".replace(\"\\n\", \"\")\n",
     "#*-- last line alternative for realtime stdout along with file (tee)\n",
@@ -212,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "070ec3e2",
    "metadata": {},
    "outputs": [
@@ -220,10 +244,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/storage/alperengenc/change_detection/ChangeMamba_AG\n",
-      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_tr2025-09-21_17-52-20_MambaBDA_Tiny_xBD_on_xBD.log\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_tr2025-09-27_14-47-52_MambaBDA_Base_xBD2_FOCAL_on_xBD2.log\n",
       "UID          PID    PPID  C STIME TTY          TIME CMD\n",
-      "alperen+ 2045188       1  0 12:02 ?        00:00:01 python -u changedetection/sc\n"
+      "alpgenc  3537558       1  0 22:03 ?        00:00:01 python -u changedetection/sc\n"
      ]
     }
    ],
@@ -239,8 +263,8 @@
     "\n",
     "\n",
     "\n",
-    "MODEL_NAME = 'MambaBDA_Tiny' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
-    "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\"\n",
+    "MODEL_NAME = 'MambaBDA_Base' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
+    "DATASET = \"xBD2\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\"\n",
     "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
     "cfg_file = cfg_dict[MODEL_NAME]\n",
@@ -248,9 +272,11 @@
     "test_data_list_path = dataset_info_dict[DATASET].test_data_list_path\n",
     "\n",
     "# infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-21_23-51-27_MambaBDA_Tiny_xBD/model_step31250.pth'\n",
-    "infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-21_17-52-20_MambaBDA_Tiny_xBD/model_step31250.pth'\n",
+    "infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-27_14-47-52_MambaBDA_Base_xBD2_FOCAL/model_step50000.pth'\n",
     "_, _trained_model_folder, _trained_model_pthname = infer_model_path.rsplit(\"/\", 2)\n",
     "trained_model_name = f'{_trained_model_folder}'\n",
+    "\n",
+    "ALIGNMENT = True # True || False\n",
     "\n",
     "infer_logfilename = f\"/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_{trained_model_name}_on_{DATASET}.log\"\n",
     "print(infer_logfilename)\n",
@@ -269,6 +295,7 @@
     "    --logfile                   {infer_logfilename} \\\n",
     "    --extension                 {EXTENSION} \\\n",
     "    --no-save_output_images \\\n",
+    "    {'--enable_alignment' if ALIGNMENT else ''} \\\n",
     "    >/dev/null 2>&1 & echo $! > {infer_pidfilename}\n",
     "\"\"\".replace(\"\\n\", \"\")\n",
     "\n",
