- Attention Gate implementation. Created an attention gate module and integrated into both ChangeDecoder (damage head) and SemanticDecoder (building localization head), enabled by command line args. - Added deterministic mode but does not work because of certain pytorch functions (e.g. F.cross_entropy) - Added validation count as command line arg - included new logs

--- a/pipeline_changemamba.ipynb
+++ b/pipeline_changemamba.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c2204f68",
    "metadata": {},
    "outputs": [
@@ -18,8 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-09-29_11-06-33\n",
-      "Number of datasets: 6\n"
+      "2025-09-30_13-38-52\n",
+      "Number of datasets: 5\n"
      ]
     }
    ],
@@ -49,13 +49,13 @@
     "    test_data_list_path: str\n",
     "\n",
     "dataset_info_dict = {\n",
+    "    # \"xBD\": DatasetInfo(\n",
+    "    #     train_dataset_path   = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined',\n",
+    "    #     train_data_list_path = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined_list.txt',\n",
+    "    #     test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test',\n",
+    "    #     test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test_list.txt'\n",
+    "    # ),\n",
     "    \"xBD\": DatasetInfo(\n",
-    "        train_dataset_path   = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined',\n",
-    "        train_data_list_path = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined_list.txt',\n",
-    "        test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test',\n",
-    "        test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test_list.txt'\n",
-    "    ),\n",
-    "    \"xBD2\": DatasetInfo(\n",
     "        train_dataset_path   = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined',\n",
     "        train_data_list_path = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined/train_list2.txt',\n",
     "        test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test',\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a2975496",
    "metadata": {},
    "outputs": [
@@ -116,25 +116,11 @@
       "\u001b[01;34mchangedetection\u001b[0m/           LICENSE                     README.md\n",
       "\u001b[01;34mclassification\u001b[0m/            \u001b[01;34mLOGLAR_CMAG\u001b[0m/                README_zh-CN.md\n",
       "\u001b[01;34mdataset_analysis_scripts\u001b[0m/  modelcard.sh                requirements.txt\n",
-      "\u001b[01;34mfigures\u001b[0m/                   pipeline_changemamba.ipynb\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/alpgenc/miniconda3/envs/changemamba2/lib/python3.10/site-packages/IPython/core/magics/osm.py:417: UserWarning: This is now an optional IPython functionality, setting dhist requires you to install the `pickleshare` library.\n",
-      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-29_11-11-05_MambaBDA_Base_EarthquakeTurkey_FOCAL_ALIGN.log\n",
-      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-29_11-11-05_MambaBDA_Base_EarthquakeTurkey_FOCAL_ALIGN.pid.log\n",
+      "\u001b[01;34mfigures\u001b[0m/                   pipeline_changemamba.ipynb\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-30_13-38-57_MambaBDA_Base_xBD_FOCAL_ALIGN.log\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-30_13-38-57_MambaBDA_Base_xBD_FOCAL_ALIGN.pid.log\n",
       "UID          PID    PPID  C STIME TTY          TIME CMD\n",
-      "alpgenc  3549587       1  0 11:11 ?        00:00:01 python -u changedetection/sc\n"
+      "alpgenc  3715529       1  0 13:38 ?        00:00:01 python -u changedetection/sc\n"
      ]
     }
    ],
@@ -152,7 +138,7 @@
     "\n",
     "\n",
     "MODEL_NAME = 'MambaBDA_Base' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
-    "DATASET = \"EarthquakeTurkey\" # \"xBD\" || \"mwBTFreddy\" || \"EarthquakeTurkey\" || \"HurricaneIda\"\n",
+    "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\" || \"EarthquakeTurkey\" || \"HurricaneIda\"\n",
     "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
     "cfg_file = cfg_dict[MODEL_NAME]\n",
@@ -161,15 +147,19 @@
     "\n",
     "FOCAL = True # True || False\n",
     "ALIGNMENT = True # True || False\n",
+    "ATTN_GATE_BLDNG = False # True || False\n",
+    "ATTN_GATE_DMG = False # True || False\n",
+    "DETERMINISTIC = False # True || False # Not working for now so use False. (2025.09.29, torch==2.5.0) because of non-deterministic functions (e.g. F.cross_entropy)\n",
+    "VALIDATIONS = 8\n",
     "\n",
     "#############################################################################################################\n",
     "\n",
     "FOCAL_str = '_FOCAL' if FOCAL else ''\n",
     "ALIGN_str = '_ALIGN' if ALIGNMENT else ''\n",
+    "AG_str = f'{\"_AG\" if (ATTN_GATE_BLDNG or ATTN_GATE_DMG) else \"\"}{\"B\" if ATTN_GATE_BLDNG else \"\"}{\"D\" if ATTN_GATE_DMG else \"\"}' \n",
     "FT_str = '_FT' if 'tr2025' in pretrained_file else '' # 'tr2025' -> already trained model, so new training using this will be a fine tune.\n",
     "\n",
-    "FILE_ID_str = f\"{now}_{MODEL_NAME}_{DATASET}{FT_str}{FOCAL_str}{ALIGN_str}\"\n",
-    "\n",
+    "FILE_ID_str = f\"{now}_{MODEL_NAME}_{DATASET}{FT_str}{FOCAL_str}{ALIGN_str}{AG_str}\"\n",
     "\n",
     "train_dataset_path   = dataset_info_dict[DATASET].train_dataset_path\n",
     "train_data_list_path = dataset_info_dict[DATASET].train_data_list_path\n",
@@ -198,7 +188,7 @@
     "     --dataset                {DATASET} \\\n",
     "     --batch_size             8 \\\n",
     "     --crop_size              256 \\\n",
-    "     --max_iters              100_000 \\\n",
+    "     --max_iters              400_000 \\\n",
     "     --model_type             {MODEL_NAME} \\\n",
     "     --model_param_path       '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr{FILE_ID_str}' \\\n",
     "     --train_dataset_path     {train_dataset_path} \\\n",
@@ -211,8 +201,12 @@
     "     --learning_rate          0.0001 \\\n",
     "     --weight_decay           0.005 \\\n",
     "     --extension              {EXTENSION} \\\n",
+    "     --validations            {VALIDATIONS} \\\n",
     "     {'--focal_loss' if FOCAL else ''} \\\n",
     "     {'--enable_alignment' if ALIGNMENT else ''} \\\n",
+    "     {'--enable_attn_gate_building' if ATTN_GATE_BLDNG else ''} \\\n",
+    "     {'--enable_attn_gate_damage' if ATTN_GATE_DMG else ''} \\\n",
+    "     {'--deterministic' if DETERMINISTIC else ''} \\\n",
     "     >/dev/null 2>&1 & echo $! > {pidfilename}\n",
     "\"\"\".replace(\"\\n\", \"\")\n",
     "#*-- last line alternative for realtime stdout along with file (tee)\n",
