- Included pakistan flood, tonga volcano and hurricane ian datasets. Created Merged dataset. - implemented train set evaluation to compare with test evaluation. - new training logs

--- a/pipeline_changemamba.ipynb
+++ b/pipeline_changemamba.ipynb
@@ -18,8 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-09-30_13-38-52\n",
-      "Number of datasets: 5\n"
+      "2025-10-04_09-41-42\n",
+      "Number of datasets: 8\n"
      ]
     }
    ],
@@ -87,7 +87,28 @@
     "        train_data_list_path = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ida/filtered/train_list.txt',\n",
     "        test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ida/filtered',\n",
     "        test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ida/filtered/test_list.txt',\n",
-    "    )\n",
+    "    ),\n",
+    "    ###############################################\n",
+    "    \"PakistanFlooding\": DatasetInfo(\n",
+    "        train_dataset_path   = '/mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding',\n",
+    "        train_data_list_path = '/mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding/train_list.txt',\n",
+    "        test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding',\n",
+    "        test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/datasets/pakistan_flooding/pakistan-flooding/test_list.txt',\n",
+    "    ),\n",
+    "    ###############################################\n",
+    "    \"HurricaneIan\": DatasetInfo(\n",
+    "        train_dataset_path   = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ian/hurricane-ian',\n",
+    "        train_data_list_path = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ian/hurricane-ian/train_list.txt',\n",
+    "        test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ian/hurricane-ian',\n",
+    "        test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ian/hurricane-ian/test_list.txt',\n",
+    "    ),\n",
+    "    ###############################################\n",
+    "    \"merged1\": DatasetInfo(\n",
+    "        train_dataset_path   = '/mnt/storage1/alpgenc/change_detection/datasets/merged1',\n",
+    "        train_data_list_path = '/mnt/storage1/alpgenc/change_detection/datasets/merged1/train_list.txt',\n",
+    "        test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/datasets/merged1',\n",
+    "        test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/datasets/merged1/test_list.txt',\n",
+    "    ),\n",
     "}\n",
     "print(datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\"))\n",
     "print(f\"Number of datasets: {len(dataset_info_dict)}\")\n"
@@ -117,10 +138,10 @@
       "\u001b[01;34mclassification\u001b[0m/            \u001b[01;34mLOGLAR_CMAG\u001b[0m/                README_zh-CN.md\n",
       "\u001b[01;34mdataset_analysis_scripts\u001b[0m/  modelcard.sh                requirements.txt\n",
       "\u001b[01;34mfigures\u001b[0m/                   pipeline_changemamba.ipynb\n",
-      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-30_13-38-57_MambaBDA_Base_xBD_FOCAL_ALIGN.log\n",
-      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-30_13-38-57_MambaBDA_Base_xBD_FOCAL_ALIGN.pid.log\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-10-04_09-41-45_MambaBDA_Base_xBD_FOCAL_ALIGN_AGBD.log\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-10-04_09-41-45_MambaBDA_Base_xBD_FOCAL_ALIGN_AGBD.pid.log\n",
       "UID          PID    PPID  C STIME TTY          TIME CMD\n",
-      "alpgenc  3715529       1  0 13:38 ?        00:00:01 python -u changedetection/sc\n"
+      "alpgenc    20985       1  0 09:41 ?        00:00:01 python -u changedetection/sc\n"
      ]
     }
    ],
@@ -138,7 +159,7 @@
     "\n",
     "\n",
     "MODEL_NAME = 'MambaBDA_Base' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
-    "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\" || \"EarthquakeTurkey\" || \"HurricaneIda\"\n",
+    "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\" || \"EarthquakeTurkey\" || \"HurricaneIda\" || \"PakistanFlooding\" || \"merged1\"\n",
     "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
     "cfg_file = cfg_dict[MODEL_NAME]\n",
@@ -147,10 +168,13 @@
     "\n",
     "FOCAL = True # True || False\n",
     "ALIGNMENT = True # True || False\n",
-    "ATTN_GATE_BLDNG = False # True || False\n",
-    "ATTN_GATE_DMG = False # True || False\n",
+    "ATTN_GATE_BLDNG = True # True || False\n",
+    "ATTN_GATE_DMG = True # True || False\n",
+    "\n",
     "DETERMINISTIC = False # True || False # Not working for now so use False. (2025.09.29, torch==2.5.0) because of non-deterministic functions (e.g. F.cross_entropy)\n",
     "VALIDATIONS = 8\n",
+    "MEASURE_TRAIN = True\n",
+    "MAX_ITERS = 400_000\n",
     "\n",
     "#############################################################################################################\n",
     "\n",
@@ -188,7 +212,7 @@
     "     --dataset                {DATASET} \\\n",
     "     --batch_size             8 \\\n",
     "     --crop_size              256 \\\n",
-    "     --max_iters              400_000 \\\n",
+    "     --max_iters              {MAX_ITERS} \\\n",
     "     --model_type             {MODEL_NAME} \\\n",
     "     --model_param_path       '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr{FILE_ID_str}' \\\n",
     "     --train_dataset_path     {train_dataset_path} \\\n",
@@ -207,6 +231,7 @@
     "     {'--enable_attn_gate_building' if ATTN_GATE_BLDNG else ''} \\\n",
     "     {'--enable_attn_gate_damage' if ATTN_GATE_DMG else ''} \\\n",
     "     {'--deterministic' if DETERMINISTIC else ''} \\\n",
+    "     {'--measure_train_scores' if MEASURE_TRAIN else ''} \\\n",
     "     >/dev/null 2>&1 & echo $! > {pidfilename}\n",
     "\"\"\".replace(\"\\n\", \"\")\n",
     "#*-- last line alternative for realtime stdout along with file (tee)\n",
